--- a/concourse/pipelines/windows-image-build.yaml
+++ b/concourse/pipelines/windows-image-build.yaml
@@ -167,7 +167,7 @@ jobs:
       secret_name: "winserver-20h2-64"
   - load_var: windows-iso
     file: gcp-secret-manager/winserver-20h2-64
-  - task: get-secret-dotnet48
+  - task: get-secret-updates
     file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
     vars:
       secret_name: "windows_gcs_updates_sac20h2"
@@ -235,17 +235,47 @@ jobs:
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: get-secret-iso
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "winserver-2004-64"
+  - load_var: windows-iso
+    file: gcp-secret-manager/winserver-2004-64
+  - task: get-secret-updates
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_updates_sac2004"
+  - load_var: windows-updates
+    file: gcp-secret-manager/windows_gcs_updates_sac2004
+  - task: get-secret-pwsh
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_pwsh"
+  - load_var: windows-gcs-pwsh
+    file: gcp-secret-manager/windows_gcs_pwsh
+  - task: get-secret-cloud-sdk
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_cloud_sdk"
+  - load_var: windows-cloud-sdk
+    file: gcp-secret-manager/windows_gcs_cloud_sdk
+  - task: get-secret-dotnet48
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_dotnet48"
+  - load_var: windows-gcs-dotnet48
+    file: gcp-secret-manager/windows_gcs_dotnet48
   - task: daisy-build-windows-2004-core
     file: guest-test-infra/concourse/tasks/daisy-build-images-windows.yaml
     vars:
       wf: "windows/windows-server-2004-dc-core-uefi.wf.json"
       gcs_url: ((.:gcs-url))
       gcs_internal_url: ((.:gcs-internal-url))
-      iso: ((iso-paths.winserver-2004-64))
-      pwsh: ((windows-paths.gcs_pwsh))
-      dotnet48: ((windows-paths.gcs_dotnet48))
-      cloudsdk: ((windows-paths.gcs_cloud_sdk))
-      updates: ((windows-paths.gcs_updates_sac2004))
+      iso: ((.:windows-iso))
+      pwsh: ((.:windows-gcs-pwsh))
+      dotnet48: ((.:windows-gcs-dotnet48))
+      cloudsdk: ((.:windows-cloud-sdk))
+      updates: ((.:windows-updates))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 # Windows 2019
@@ -277,17 +307,47 @@ jobs:
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: get-secret-iso
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "win2019-64"
+  - load_var: windows-iso
+    file: gcp-secret-manager/win2019-64
+  - task: get-secret-updates
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_updates_server2019"
+  - load_var: windows-updates
+    file: gcp-secret-manager/windows_gcs_updates_server2019
+  - task: get-secret-pwsh
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_pwsh"
+  - load_var: windows-gcs-pwsh
+    file: gcp-secret-manager/windows_gcs_pwsh
+  - task: get-secret-cloud-sdk
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_cloud_sdk"
+  - load_var: windows-cloud-sdk
+    file: gcp-secret-manager/windows_gcs_cloud_sdk
+  - task: get-secret-dotnet48
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_dotnet48"
+  - load_var: windows-gcs-dotnet48
+    file: gcp-secret-manager/windows_gcs_dotnet48
   - task: daisy-build-windows-2019
     file: guest-test-infra/concourse/tasks/daisy-build-images-windows.yaml
     vars:
       wf: "windows/windows-server-2019-dc-uefi.wf.json"
       gcs_url: ((.:gcs-url))
       gcs_internal_url: ((.:gcs-internal-url))
-      iso: ((iso-paths.win2019-64))
-      pwsh: ((windows-paths.gcs_pwsh))
-      dotnet48: ((windows-paths.gcs_dotnet48))
-      cloudsdk: ((windows-paths.gcs_cloud_sdk))
-      updates: ((windows-paths.gcs_updates_server2019))
+      iso: ((.:windows-iso))
+      pwsh: ((.:windows-gcs-pwsh))
+      dotnet48: ((.:windows-gcs-dotnet48))
+      cloudsdk: ((.:windows-cloud-sdk))
+      updates: ((.:windows-updates))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 # Windows 2019 Core
@@ -319,17 +379,47 @@ jobs:
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: get-secret-iso
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "win2019-64"
+  - load_var: windows-iso
+    file: gcp-secret-manager/win2019-64
+  - task: get-secret-updates
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_updates_server2019"
+  - load_var: windows-updates
+    file: gcp-secret-manager/windows_gcs_updates_server2019
+  - task: get-secret-pwsh
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_pwsh"
+  - load_var: windows-gcs-pwsh
+    file: gcp-secret-manager/windows_gcs_pwsh
+  - task: get-secret-cloud-sdk
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_cloud_sdk"
+  - load_var: windows-cloud-sdk
+    file: gcp-secret-manager/windows_gcs_cloud_sdk
+  - task: get-secret-dotnet48
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_dotnet48"
+  - load_var: windows-gcs-dotnet48
+    file: gcp-secret-manager/windows_gcs_dotnet48
   - task: daisy-build-windows-2019-core
     file: guest-test-infra/concourse/tasks/daisy-build-images-windows.yaml
     vars:
       wf: "windows/windows-server-2019-dc-core-uefi.wf.json"
       gcs_url: ((.:gcs-url))
       gcs_internal_url: ((.:gcs-internal-url))
-      iso: ((iso-paths.win2019-64))
-      pwsh: ((windows-paths.gcs_pwsh))
-      dotnet48: ((windows-paths.gcs_dotnet48))
-      cloudsdk: ((windows-paths.gcs_cloud_sdk))
-      updates: ((windows-paths.gcs_updates_server2019))
+      iso: ((.:windows-iso))
+      pwsh: ((.:windows-gcs-pwsh))
+      dotnet48: ((.:windows-gcs-dotnet48))
+      cloudsdk: ((.:windows-cloud-sdk))
+      updates: ((.:windows-updates))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 # Windows 2016
@@ -361,17 +451,47 @@ jobs:
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: get-secret-iso
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "win2016-64"
+  - load_var: windows-iso
+    file: gcp-secret-manager/win2016-64
+  - task: get-secret-updates
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_updates_server2016"
+  - load_var: windows-updates
+    file: gcp-secret-manager/windows_gcs_updates_server2016
+  - task: get-secret-pwsh
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_pwsh"
+  - load_var: windows-gcs-pwsh
+    file: gcp-secret-manager/windows_gcs_pwsh
+  - task: get-secret-cloud-sdk
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_cloud_sdk"
+  - load_var: windows-cloud-sdk
+    file: gcp-secret-manager/windows_gcs_cloud_sdk
+  - task: get-secret-dotnet48
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_dotnet48"
+  - load_var: windows-gcs-dotnet48
+    file: gcp-secret-manager/windows_gcs_dotnet48
   - task: daisy-build-windows-2016
     file: guest-test-infra/concourse/tasks/daisy-build-images-windows.yaml
     vars:
       wf: "windows/windows-server-2016-dc-uefi.wf.json"
       gcs_url: ((.:gcs-url))
       gcs_internal_url: ((.:gcs-internal-url))
-      iso: ((iso-paths.win2016-64))
-      pwsh: ((windows-paths.gcs_pwsh))
-      dotnet48: ((windows-paths.gcs_dotnet48))
-      cloudsdk: ((windows-paths.gcs_cloud_sdk))
-      updates: ((windows-paths.gcs_updates_server2016))
+      iso: ((.:windows-iso))
+      pwsh: ((.:windows-gcs-pwsh))
+      dotnet48: ((.:windows-gcs-dotnet48))
+      cloudsdk: ((.:windows-cloud-sdk))
+      updates: ((.:windows-updates))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 # Windows 2016 Core
@@ -403,17 +523,47 @@ jobs:
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: get-secret-iso
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "win2016-64"
+  - load_var: windows-iso
+    file: gcp-secret-manager/win2016-64
+  - task: get-secret-updates
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_updates_server2016"
+  - load_var: windows-updates
+    file: gcp-secret-manager/windows_gcs_updates_server2016
+  - task: get-secret-pwsh
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_pwsh"
+  - load_var: windows-gcs-pwsh
+    file: gcp-secret-manager/windows_gcs_pwsh
+  - task: get-secret-cloud-sdk
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_cloud_sdk"
+  - load_var: windows-cloud-sdk
+    file: gcp-secret-manager/windows_gcs_cloud_sdk
+  - task: get-secret-dotnet48
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_dotnet48"
+  - load_var: windows-gcs-dotnet48
+    file: gcp-secret-manager/windows_gcs_dotnet48
   - task: daisy-build-windows-2016-core
     file: guest-test-infra/concourse/tasks/daisy-build-images-windows.yaml
     vars:
       wf: "windows/windows-server-2016-dc-core-uefi.wf.json"
       gcs_url: ((.:gcs-url))
       gcs_internal_url: ((.:gcs-internal-url))
-      iso: ((iso-paths.win2016-64))
-      pwsh: ((windows-paths.gcs_pwsh))
-      dotnet48: ((windows-paths.gcs_dotnet48))
-      cloudsdk: ((windows-paths.gcs_cloud_sdk))
-      updates: ((windows-paths.gcs_updates_server2016))
+      iso: ((.:windows-iso))
+      pwsh: ((.:windows-gcs-pwsh))
+      dotnet48: ((.:windows-gcs-dotnet48))
+      cloudsdk: ((.:windows-cloud-sdk))
+      updates: ((.:windows-updates))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 # Windows 2012r2
@@ -445,17 +595,47 @@ jobs:
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: get-secret-iso
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "win2012-r2-64"
+  - load_var: windows-iso
+    file: gcp-secret-manager/win2012-r2-64
+  - task: get-secret-updates
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_updates_server2012r2"
+  - load_var: windows-updates
+    file: gcp-secret-manager/windows_gcs_updates_server2012r2
+  - task: get-secret-pwsh
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_pwsh"
+  - load_var: windows-gcs-pwsh
+    file: gcp-secret-manager/windows_gcs_pwsh
+  - task: get-secret-cloud-sdk
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_cloud_sdk"
+  - load_var: windows-cloud-sdk
+    file: gcp-secret-manager/windows_gcs_cloud_sdk
+  - task: get-secret-dotnet48
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_dotnet48"
+  - load_var: windows-gcs-dotnet48
+    file: gcp-secret-manager/windows_gcs_dotnet48
   - task: daisy-build-windows-2012r2
     file: guest-test-infra/concourse/tasks/daisy-build-images-windows.yaml
     vars:
       wf: "windows/windows-server-2012r2-dc-uefi.wf.json"
       gcs_url: ((.:gcs-url))
       gcs_internal_url: ((.:gcs-internal-url))
-      iso: ((iso-paths.win2012-r2-64))
-      pwsh: ((windows-paths.gcs_pwsh))
-      dotnet48: ((windows-paths.gcs_dotnet48))
-      cloudsdk: ((windows-paths.gcs_cloud_sdk))
-      updates: ((windows-paths.gcs_updates_server2012r2))
+      iso: ((.:windows-iso))
+      pwsh: ((.:windows-gcs-pwsh))
+      dotnet48: ((.:windows-gcs-dotnet48))
+      cloudsdk: ((.:windows-cloud-sdk))
+      updates: ((.:windows-updates))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 # Windows 2012r2 Core
@@ -487,17 +667,47 @@ jobs:
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: get-secret-iso
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "win2012-r2-64"
+  - load_var: windows-iso
+    file: gcp-secret-manager/win2012-r2-64
+  - task: get-secret-updates
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_updates_server2012r2"
+  - load_var: windows-updates
+    file: gcp-secret-manager/windows_gcs_updates_server2012r2
+  - task: get-secret-pwsh
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_pwsh"
+  - load_var: windows-gcs-pwsh
+    file: gcp-secret-manager/windows_gcs_pwsh
+  - task: get-secret-cloud-sdk
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_cloud_sdk"
+  - load_var: windows-cloud-sdk
+    file: gcp-secret-manager/windows_gcs_cloud_sdk
+  - task: get-secret-dotnet48
+    file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
+    vars:
+      secret_name: "windows_gcs_dotnet48"
+  - load_var: windows-gcs-dotnet48
+    file: gcp-secret-manager/windows_gcs_dotnet48
   - task: daisy-build-windows-2012r2-core
     file: guest-test-infra/concourse/tasks/daisy-build-images-windows.yaml
     vars:
       wf: "windows/windows-server-2012r2-dc-core-uefi.wf.json"
       gcs_url: ((.:gcs-url))
       gcs_internal_url: ((.:gcs-internal-url))
-      iso: ((iso-paths.win2012-r2-64))
-      pwsh: ((windows-paths.gcs_pwsh))
-      dotnet48: ((windows-paths.gcs_dotnet48))
-      cloudsdk: ((windows-paths.gcs_cloud_sdk))
-      updates: ((windows-paths.gcs_updates_server2012r2))
+      iso: ((.:windows-iso))
+      pwsh: ((.:windows-gcs-pwsh))
+      dotnet48: ((.:windows-gcs-dotnet48))
+      cloudsdk: ((.:windows-cloud-sdk))
+      updates: ((.:windows-updates))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 
