disable OS Login tests

--- a/concourse/tasks/image-test-args.yaml
+++ b/concourse/tasks/image-test-args.yaml
@@ -21,4 +21,5 @@ run:
   - -zone=us-west1-a
   - -test_projects=compute-image-test-pool-002,compute-image-test-pool-003,compute-image-test-pool-004,compute-image-test-pool-005
   - -images=((images))
+  - -exclude=oslogin
   - ((extra-args))
