--- a/concourse/tasks/image-test.yaml
+++ b/concourse/tasks/image-test.yaml
@@ -20,4 +20,5 @@ run:
   - -project=gcp-guest
   - -zone=us-west1-a
   - -test_projects=compute-image-test-pool-002,compute-image-test-pool-003,compute-image-test-pool-004,compute-image-test-pool-005
+  - -exclude=oslogin
   - -images=((images))
