--- a/concourse/pipelines/guest-package-build.yaml
+++ b/concourse/pipelines/guest-package-build.yaml
@@ -166,7 +166,7 @@ jobs:
     file: guest-test-infra/concourse/tasks/image-test-args.yaml
     vars:
       images: projects/gcp-guest/global/images/debian-9-((.:build-id)),projects/gcp-guest/global/images/debian-10-((.:build-id)),projects/gcp-guest/global/images/debian-11-((.:build-id)),projects/gcp-guest/global/images/centos-7-((.:build-id)),projects/gcp-guest/global/images/centos-8-((.:build-id)),projects/gcp-guest/global/images/rhel-7-((.:build-id)),projects/gcp-guest/global/images/rhel-8-((.:build-id))
-      extra-args: "-exclude=(image)|(disk)|(security)"
+      extra-args: "-exclude=(image)|(disk)|(security)|(oslogin)"
   - in_parallel:
       fail_fast: true
       steps:
