--- a/concourse/pipelines/container-build.yaml
+++ b/concourse/pipelines/container-build.yaml
@@ -45,6 +45,18 @@ jobs:
     vars:
       destination: gcr.io/gcp-guest/gotest:latest
       context: guest-test-infra/container_images/gotest
+- name: build-cli-tools-module-tests-container
+  serial_groups: [serial]
+  plan:
+    - get: guest-test-infra
+      trigger: true
+    - task: get-credential
+      file: guest-test-infra/concourse/tasks/get-credential.yaml
+    - task: build-image
+      file: guest-test-infra/concourse/tasks/build-container-image.yaml
+      vars:
+        destination: gcr.io/gcp-guest/cli-tools-module-tests:latest
+        context: guest-test-infra/container_images/cli-tools-module-tests
 - name: build-gocheck-container
   serial_groups: [serial]
   plan:
