--- a/concourse/pipelines/windows-image-build.yaml
+++ b/concourse/pipelines/windows-image-build.yaml
@@ -1171,7 +1171,7 @@ jobs:
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
       wf: "windows/windows-server-2022-dc-uefi.publish.json"
-      environment: "test"
+      environment: "staging"
 # Windows 2022 Core
 - name: publish-to-staging-2022-core
   plan:
