--- a/concourse/pipelines/windows-image-build.yaml
+++ b/concourse/pipelines/windows-image-build.yaml
@@ -164,6 +164,20 @@ resources:
     json_key: |
       ((gcs-key.credential))
     regexp: "sqlserver-uefi/sql-2012-enterprise-windows-2012-r2-dc-v([0-9]+).tar.gz"
+- name: windows-2019-core-for-containers-uefi-gcs
+  type: gcs
+  source:
+    bucket: artifact-releaser-prod-rtp
+    json_key: |
+      ((gcs-key.credential))
+    regexp: "windows_uefi/windows-2019-core-for-containers-uefi-v([0-9]+).tar.gz"
+- name: windows-2019-for-containers-uefi-gcs
+  type: gcs
+  source:
+    bucket: artifact-releaser-prod-rtp
+    json_key: |
+      ((gcs-key.credential))
+    regexp: "windows_uefi/windows-2019-for-containers-uefi-v([0-9]+).tar.gz"
 
 jobs:
 # Build jobs
@@ -1093,6 +1107,62 @@ jobs:
       source_image_project: "bct-prod-images"
       ssms_exe: ((.:windows_gcs_ssms_exe))
       timeout: "4h"
+# windows-2019-core-for-containers-uefi
+- name: build-windows-2019-core-for-containers-uefi
+  plan:
+  - get: compute-image-tools
+    passed: [publish-to-testing-windows-2019-core]
+    trigger: true
+  - get: guest-test-infra
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: generate-build-id
+    file: guest-test-infra/concourse/tasks/generate-build-ids-windows.yaml
+    vars:
+      prefix: "windows-2019-core-for-containers-uefi"
+  - put: windows-2019-core-for-containers-uefi-gcs
+    params:
+      file: build-id-dir/windows-2019-core-for-containers-uefi-v*
+  - load_var: gcs_url
+    file: windows-2019-core-for-containers-uefi-gcs/url
+  - task: generate-build-date
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: build-date
+    file: publish-version/version
+  - task: daisy-build-windows-2019-core-for-containers-uefi
+    file: guest-test-infra/concourse/tasks/daisy-build-images-windows-container.yaml
+    vars:
+      wf: "windows_container/windows-2019-core-for-containers-uefi.wf.json"
+      gcs_url: ((.:gcs_url))
+      build_date: ((.:build-date))
+# windows-2019-for-containers-uefi
+- name: build-windows-2019-for-containers-uefi
+  plan:
+  - get: compute-image-tools
+    passed: [publish-to-testing-windows-2019]
+    trigger: true
+  - get: guest-test-infra
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: generate-build-id
+    file: guest-test-infra/concourse/tasks/generate-build-ids-windows.yaml
+    vars:
+      prefix: "windows-2019-for-containers-uefi"
+  - put: windows-2019-for-containers-uefi-gcs
+    params:
+      file: build-id-dir/windows-2019-for-containers-uefi-v*
+  - load_var: gcs_url
+    file: windows-2019-for-containers-uefi-gcs/url
+  - task: generate-build-date
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: build-date
+    file: publish-version/version
+  - task: daisy-build-windows-2019-for-containers-uefi
+    file: guest-test-infra/concourse/tasks/daisy-build-images-windows-container.yaml
+    vars:
+      wf: "windows_container/windows-2019-for-containers-uefi.wf.json"
+      gcs_url: ((.:gcs_url))
+      build_date: ((.:build-date))
 
 # Publish to testing
 # Windows 2022
@@ -1539,6 +1609,54 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "sqlserver/sql-2012-enterprise-windows-2012-r2-dc-uefi.publish"
       environment: "test"
+# windows-2019-core-for-containers-uefi
+- name: publish-to-testing-windows-2019-core-for-containers-uefi
+  plan:
+  - get: guest-test-infra
+    passed: [build-windows-2019-core-for-containers-uefi]
+    trigger: true
+  - get: compute-image-tools
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - get: windows-2019-core-for-containers-uefi-gcs
+  - load_var: source-version
+    file: windows-2019-core-for-containers-uefi-gcs/version
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-windows-2019-core-for-containers-uefi
+    file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
+    vars:
+      source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-core-for-containers-uefi.publish.json"
+      environment: "test"
+# windows-2019-for-containers-uefi
+- name: publish-to-testing-windows-2019-for-containers-uefi
+  plan:
+  - get: guest-test-infra
+    passed: [build-windows-2019-for-containers-uefi]
+    trigger: true
+  - get: compute-image-tools
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - get: windows-2019-for-containers-uefi-gcs
+  - load_var: source-version
+    file: windows-2019-for-containers-uefi-gcs/version
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-windows-2019-for-containers-uefi
+    file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
+    vars:
+      source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-for-containers-uefi.publish.json"
+      environment: "test"
 
 # Publish to staging
 # Windows 2022
@@ -1984,6 +2102,54 @@ jobs:
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
       wf: "sqlserver/sql-2012-enterprise-windows-2012-r2-dc-uefi.publish"
+      environment: "staging"
+# windows-2019-core-for-containers-uefi
+- name: publish-to-staging-windows-2019-core-for-containers-uefi
+  plan:
+  - get: guest-test-infra
+    passed: [publish-to-testing-windows-2019-core-for-containers-uefi]
+    trigger: false
+  - get: compute-image-tools
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - get: windows-2019-core-for-containers-uefi-gcs
+  - load_var: source-version
+    file: windows-2019-core-for-containers-uefi-gcs/version
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-windows-2019-core-for-containers-uefi
+    file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
+    vars:
+      source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-core-for-containers-uefi.publish.json"
+      environment: "staging"
+# windows-2019-for-containers-uefi
+- name: publish-to-staging-windows-2019-for-containers-uefi
+  plan:
+  - get: guest-test-infra
+    passed: [publish-to-testing-windows-2019-for-containers-uefi]
+    trigger: false
+  - get: compute-image-tools
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - get: windows-2019-for-containers-uefi-gcs
+  - load_var: source-version
+    file: windows-2019-for-containers-uefi-gcs/version
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-windows-2019-for-containers-uefi
+    file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
+    vars:
+      source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-for-containers-uefi.publish.json"
       environment: "staging"
 
 # Publish to prod
@@ -2451,5 +2617,57 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "sqlserver/sql-2012-enterprise-windows-2012-r2-dc-uefi.publish"
       image_name: "sql-2012-enterprise-windows-2012-r2-dc"
+      release_notes: ""
+      topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
+# windows-2019-core-for-containers-uefi
+- name: publish-to-prod-windows-2019-core-for-containers-uefi
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - get: windows-2019-core-for-containers-uefi-gcs
+    passed: [publish-to-staging-windows-2019-core-for-containers-uefi]
+    trigger: false
+  - load_var: source-version
+    file: windows-2019-core-for-containers-uefi-gcs/version
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-windows-2019-core-for-containers-uefi
+    file: guest-test-infra/concourse/tasks/gcloud-publish-image.yaml
+    vars:
+      gcs_image_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-core-for-containers-uefi.publish.json"
+      image_name: "windows-2019-core-for-containers-uefi"
+      release_notes: ""
+      topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
+# windows-2019-for-containers-uefi
+- name: publish-to-prod-windows-2019-for-containers-uefi
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - get: windows-2019-for-containers-uefi-gcs
+    passed: [publish-to-staging-windows-2019-for-containers-uefi]
+    trigger: false
+  - load_var: source-version
+    file: windows-2019-for-containers-uefi-gcs/version
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-windows-2019-for-containers-uefi
+    file: guest-test-infra/concourse/tasks/gcloud-publish-image.yaml
+    vars:
+      gcs_image_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-for-containers-uefi.publish.json"
+      image_name: "windows-2019-for-containers-uefi"
       release_notes: ""
       topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
